--- a/src/content/blog/svelte.mdx
+++ b/src/content/blog/svelte.mdx
@@ -1,7 +1,7 @@
 ---
 title: SvelteKit from zero to hero
 description: Learn SvelteKit in the easiest way from scratch.
-image: '$assets/blog-placeholder-3.jpg'
+image: $assets/blog-placeholder-3.jpg
 tags:
 - Svelte
 - Web development
